# hsds-entity-resolution

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml  skills-lock.json
.codacy/: codacy.yaml
.dg/: telemetry.yaml
docs/: deduplication-schema-audit.md  review-interface-write-path.md  training-and-tuning.md
src/hsds_entity_resolution/: __init__.py  definitions.py
src/hsds_entity_resolution/components/: __init__.py  entity_resolution_component.py
src/hsds_entity_resolution/config/: __init__.py  entity_resolution_run_config.py
src/hsds_entity_resolution/core/: __init__.py  apply_mitigation.py  clean_entities.py  cluster_pairs.py  dataframe_utils.py  domain_utils.py  evidence_policy.py  feature_extractor.py  generate_candidates.py  materialize_review_queue.py  ml_inference.py  pair_tiering.py  pipeline.py  prepare_persistence_artifacts.py  score_candidates.py  taxonomy_utils.py  training_feature_store.py  training_features.py  training_schema.py
src/hsds_entity_resolution/core/nlp/: __init__.py  algorithms.py  safeguards.py  scoring.py  types.py
src/hsds_entity_resolution/dagster/: __init__.py
src/hsds_entity_resolution/dagster/components/: __init__.py  entity_resolution_component.py
src/hsds_entity_resolution/observability/: __init__.py  progress.py  tracer.py
src/hsds_entity_resolution/tf_idf_models/: tfidf_vectorizer_organization.joblib  tfidf_vectorizer_service.joblib
src/hsds_entity_resolution/types/: __init__.py  artifact_rows.py  contracts.py  domain.py  frames.py
src/hsds_entity_resolution/types/rows/: __init__.py  clean_entity_rows.py
tests/: __init__.py  conftest.py  test_apply_mitigation_and_review_queue.py  test_clean_entities.py  test_cluster_pairs.py  test_consumer_embedding_freshness.py  test_cut_training_dataset.py  test_dagster_component_and_defs.py  test_dataframe_utils.py  test_deduplication_common_models.py  test_domain_taxonomy_utils.py  test_embedding_adapter.py  test_entity_resolution_pipeline.py  test_generate_candidates_prefilter.py  test_incremental_scenarios.py  test_ml_inference_tfidf_path_resolution.py  test_ml_signal_overrides.py  test_nlp_scoring.py  test_persistence_executor.py  test_real_data_scenarios.py  test_run_config_validation.py  test_score_candidates_ml_inference.py  test_snowflake_embedding_store_queries.py  test_source_loader_helpers.py  test_staging_retention_policy.py  test_taxonomy_embedding_loader.py  test_training_feature_store.py  test_types_modules.py
tests/contract/: common_experiment_schema_contract.json  test_artifact_to_model_mapping.py  test_common_experiment_schema_contract.py  test_job_registry.py  test_sql_templates.py  test_training_data_schema_contract.py  training_data_schema_contract.json
tests/fixtures/: burrell_sph_pair.json
tests/integration/: test_adapter_flow.py  test_consumer_defs.py
