[project]
name = "hsds_entity_resolution"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
description = "Reusable Dagster component package for HSDS entity resolution workflows."
readme = "README.md"
dependencies = [
    "dagster==1.12.17",
    "pydantic>=2,<3",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "ruff>=0.11.0",
    "pyright>=1.1.400",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.10"
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
reportMissingTypeStubs = "none"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hsds_entity_resolution"]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "hsds_entity_resolution"
registry_modules = [
    "hsds_entity_resolution.components.*",
]

[project.entry-points."dagster_dg_cli.registry_modules"]
hsds_entity_resolution = "hsds_entity_resolution.components"
