[project]
name = "hsds_entity_resolution"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
description = "Reusable Dagster component package for HSDS entity resolution workflows."
readme = "README.md"
dependencies = [
    "dagster==1.12.17",
    "dagster-snowflake>=0.28.17",
    "huggingface-hub>=1.5.0",
    "joblib>=1.3,<2",
    "numpy>=1.26,<3",
    "scikit-learn>=1.3,<2",
    "polars>=1.18,<2",
    "pydantic>=2,<3",
    "tenacity>=9.1.4",
    "dagster-dbt>=0.28",
    "dbt-snowflake>=1.8",
    "tldextract>=5.3.1",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "pytest>=8,<9",
    "pytest-cov>=5,<7",
    "ruff>=0.11.0",
    "pyright>=1.1.400",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.10"
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
reportMissingTypeStubs = "none"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hsds_entity_resolution"]
force-include = { "pyproject.toml" = "pyproject.toml" }

# [tool.dg] configures the reusable EntityResolutionComponent library.
# `dg dev` loads hsds_entity_resolution.definitions, which has no jobs or assets —
# it is a component library intended for use in host Dagster projects.
#
# To run the IL211 pipeline (jobs, schedules, Snowflake persistence), use:
#   uv run dagster dev -m consumer.definitions
[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "hsds_entity_resolution"
registry_modules = [
    "hsds_entity_resolution.dagster.components.*",
]

[project.entry-points."dagster_dg_cli.registry_modules"]
hsds_entity_resolution = "hsds_entity_resolution.dagster.components"
